<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:stuckShadowDrawable="@drawable/sticky_shadow_default" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
	    <FrameLayout 
	        android:id="@+id/layoutImgContainer"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#EEEEEE">
		    <com.ezenit.customview.AspectRatioImageView
		        android:id="@+id/imgAudio"
		        android:layout_width="match_parent"
		        android:scaleType="centerInside"
		        android:minHeight="@dimen/image_museum_section"
		        android:layout_height="wrap_content"
		        app:aspect="0.52240437158469945355191256830601"/>
		    <ImageView
		        android:id="@+id/btnGallery"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/btn_gallery"
		        android:layout_gravity="bottom|right"
		        android:layout_marginBottom="13dp"
		        android:layout_marginRight="11dp"/>
		</FrameLayout>
		<LinearLayout 
		    android:id="@+id/layoutSticky"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:tag="sticky-nonconstant">
			<FrameLayout 
			    android:id="@+id/layoutPlayBtn"
			    android:layout_width="match_parent"
			    android:layout_height="66dp"
			    android:background="#EEEEEE"
			    android:paddingLeft="35dp"
			    android:paddingRight="35dp"
			    android:paddingTop="13dp"
			    android:paddingBottom="13dp">
			    <FrameLayout 
			        android:id="@+id/btnPlay"
			        android:layout_width="250dp"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@drawable/bg_play_detail">
			        <TextView 
			            android:id="@+id/lblPlayAudioDetail"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/play_audio"
			            android:textColor="@android:color/white"
			            android:textStyle="bold"
			            android:drawableLeft="@drawable/ic_play"
			            android:layout_gravity="center"
			            android:drawablePadding="10dp"/>
			    </FrameLayout>
			</FrameLayout>
			 <View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="#DADADA"
		        android:layout_gravity="bottom"/>
		 </LinearLayout>
		 <TextView
		     android:id="@+id/fieldTitle"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:textAppearance="@android:style/TextAppearance.Large"
		     android:textStyle="bold"
		     android:textColor="#010101"
		     android:text="@string/dummy_quatro_camerino"
		     android:layout_marginLeft="15dp"
		     android:layout_marginRight="15dp"
		     android:layout_marginTop="22.5dp"/>
		 
		 <LinearLayout 
		     android:id="@+id/layoutCode"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"
		     android:layout_marginLeft="15dp"
		     android:layout_marginRight="15dp"
		     android:layout_marginTop="7dp">
		       <TextView 
		         android:id="@+id/lblCode"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/code_audio"
		         android:textAppearance="@android:style/TextAppearance.Medium"
		         android:textColor="#6A6A6A"
		         android:layout_gravity="center_vertical"/>
		       <TextView 
		         android:id="@+id/fieldCode"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/dummy_codice"
		         android:textColor="#689099"
		         android:textStyle="bold"		         
		         android:textAppearance="@android:style/TextAppearance.Medium"
		         android:layout_marginLeft="4dp"
		         android:layout_gravity="center_vertical"/>
		       
		      		       
		       
		       
		 </LinearLayout>
		 
		 <LinearLayout 
		     android:id="@+id/layoutPosition"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="15dp"
		     android:layout_marginRight="15dp"
		     android:layout_marginTop="5dp"
		     android:orientation="horizontal">
		      <TextView 
		         android:id="@+id/lblPosition"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/position"
		         android:textAppearance="@android:style/TextAppearance.Medium"
		         android:textColor="#6A6A6A"
		         android:layout_gravity="center_vertical"/>
		       
		       <TextView 
		         android:id="@+id/fieldPosition"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/dummy_codice"
		         android:textColor="#689099"
		         android:textStyle="bold"		         
		         android:textAppearance="@android:style/TextAppearance.Medium"
		         android:layout_marginLeft="4dp"
		         android:layout_gravity="center_vertical"/>
		 </LinearLayout>
		 
		
		 
		 <TextView 
		     android:id="@+id/fieldDescription"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:textColor="#010101"
		     android:textAppearance="@android:style/TextAppearance.Medium"
		     android:layout_marginTop="25dp"
		     android:layout_marginLeft="15dp"
		     android:layout_marginRight="15dp"
		     android:layout_marginBottom="25dp"
		     android:text="@string/dummy_description"/>
		 
		 <View 
		     android:layout_width="match_parent"
		     android:layout_height="1dp"
		     android:background="#DADADA"/>
		 
		 <TextView 
		     android:id="@+id/lblMapTitle"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/where_is_it"
		     android:background="#F4F4F4"
		     android:textAllCaps="true"
		     android:textColor="#689099"
		     android:paddingTop="7dp"
		     android:paddingBottom="7dp"
		     android:paddingLeft="14dp"
		     android:paddingRight="14dp"/>
		 
		 <View 
		     android:layout_width="match_parent"
		     android:layout_height="1dp"
		     android:background="#DADADA"/>
		 
		 <gmail.chenyoca.imagemap.HighlightImageView
		     android:id="@+id/map"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"/>
		 
	</LinearLayout>
</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>
