<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">
    
    <LinearLayout 
        android:id="@+id/layoutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="20dp">
    
	    <FrameLayout 
	        android:id="@+id/btnLanguage"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/padding_credit">
	        <TextView 
	            android:id="@+id/lblLanguage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/language"
	            android:textColor="#333333"
	            android:layout_gravity="center_vertical"/>
	        <ImageView 
	            android:id="@+id/imgDetail"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_list_arrow_default"
	            android:layout_gravity="right|center_vertical"/>
	    </FrameLayout>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="#DADADA"/>
	    
	    <FrameLayout 
	        android:id="@+id/btnRestorePurchase"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/padding_credit"
	        android:background="@android:color/white">
	        <TextView 
	            android:id="@+id/lblRestorePurchase"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/restore_your_purchase"
	            android:textColor="#333333"
	            android:layout_gravity="center_vertical"/>
	        
	    </FrameLayout>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="#DADADA"/>
	    
	    <FrameLayout 
	        android:id="@+id/btnInfos"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/padding_credit"
	        android:background="@android:color/white">
	        <TextView 
	            android:id="@+id/lblInfos"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/infos"
	            android:textColor="#333333"
	            android:layout_gravity="center_vertical"/>
	        <ImageView 
	            android:id="@+id/imgInfos"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_list_arrow_default"
	            android:layout_gravity="right|center_vertical"/>
	    </FrameLayout>
	</LinearLayout>
</LinearLayout>
